--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 #project specific files
-cube
+cubecamera
 GPATH
 GRTAGS
 GSYMS
@@ -37,3 +37,5 @@ GTAGS
 # temporary files
 \#*\#
 .\#.*
+
+.fuse_hidden*
